--- a/style.css
+++ b/style.css
@@ -20,12 +20,13 @@ body {
   box-shadow: 10px 10px #FF0094;
   width: 40vw;
   max-width: 600px;
-  height: 30vh;
+  height: 60vh;
   padding: 5vw;
   background: #00FFA9;
   display: flex;
   flex-direction: column;
   vertical-align: center;
+  overflow-y: auto;
 }
 
 @media screen and (max-width: 768px) {
@@ -42,7 +43,8 @@ body {
 
 .output p {
   position: relative;
-  white-space: nowrap;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 .input,
 .pad {
